--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "expo:ios": "expo start --ios",
     "expo:web": "expo start --web",
     "expo:build:detox": "detox build -c ios.sim.expo",
-    "expo:test:detox": "./bin/downloadExpoApp.sh && detox test --configuration ios.sim.expo"
+    "expo:test:detox": "./bin/downloadExpoApp.sh && detox test --configuration ios.sim.expo",
+    "np": "np --no-publish",
+    "postversion": "react-native-version"
   },
   "overrides": {
     "react-error-overlay": "6.0.9"
@@ -60,6 +62,7 @@
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
+    "np": "^7.6.3",
     "react": "18.0.0",
     "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
@@ -67,6 +70,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
+    "react-native-version": "^4.0.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3"
