--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "teatime",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kauefontes/teatime.git"
+  },
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
