--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Set up our JDK environment # setup JDK environment: mandatory as we need to build  android project
         uses: actions/setup-java@v3.9.0
         with:
+          distribution: 'temurin'
           java-version: 11
 
       - name: Get yarn cache directory path
