--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch: # To trigger manual build
   release:
     types: [published] # only run the workflow when a new release has been published
+  push:
+    branches:
+      - master
 
 jobs:
   android-build:
