--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -4,9 +4,6 @@ on:
   workflow_dispatch: # To trigger manual build
   release:
     types: [published] # only run the workflow when a new release has been published
-  push:
-    branches:
-      - master
 
 jobs:
   android-build:
@@ -70,11 +67,19 @@ jobs:
           keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
 
-      ## Distribute app to Firebase App Distribution for testing / use google play internal track if you have a google play account
-      - name: upload artifact to Firebase App Distribution
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
+      ## upload generated apk to github release
+      - name: upload binaries to release
+        uses: softprops/action-gh-release@v1
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
-          appId: ${{secrets.ANDROID_FIREBASE_APP_ID}}
-          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
-          groups: testers
-          file: ${{steps.sign_app.outputs.signedReleaseFile}}
+            files: ${{steps.sign_app.outputs.signedReleaseFile}}
+
+
+      ## Distribute app to Firebase App Distribution for testing / use google play internal track if you have a google play account
+      # - name: upload artifact to Firebase App Distribution
+      #   uses: wzieba/Firebase-Distribution-Github-Action@v1
+      #   with:
+      #     appId: ${{secrets.ANDROID_FIREBASE_APP_ID}}
+      #     serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+      #     groups: testers
+      #     file: ${{steps.sign_app.outputs.signedReleaseFile}}
