--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -70,14 +70,14 @@ jobs:
       ## Upload signed APK to GitHub Release
       - name: Upload signed APK to GitHub Release
         uses: softprops/action-gh-release@v1
-        if: ${{startsWith(github.ref, 'refs/tags/v0') }}
+        if: ${{endsWith(github.ref, '-0') }}
         with:
             files: ${{steps.sign_app.outputs.signedReleaseFile}}
 
       ## Upload signed APK to internal Google Play
       - name: Upload signed APK to Google Play
         uses: r0adkll/upload-google-play@v2
-        if: ${{startsWith(github.ref, 'refs/tags/v0') }}
+        if: ${{!endsWith(github.ref, '-0') }}
         with:
           serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT }}
           packageName: ${{ secrets.GOOGLE_PLAY_PACKAGE_NAME }}
@@ -88,7 +88,7 @@ jobs:
       ## Upload signed APK to Google Play
       - name: Upload signed APK to Google Play
         uses: r0adkll/upload-google-play@v2
-        if: ${{!startsWith(github.ref, 'refs/tags/v0') }}
+        if: ${{!endsWith(github.ref, '-0') }}
         with:
           serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT }}
           packageName: ${{ secrets.GOOGLE_PLAY_PACKAGE_NAME }}
