--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -70,25 +70,13 @@ jobs:
       ## Upload signed APK to GitHub Release
       - name: Upload signed APK to GitHub Release
         uses: softprops/action-gh-release@v1
-        if: ${{endsWith(github.ref, '-0') }}
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
             files: ${{steps.sign_app.outputs.signedReleaseFile}}
-
-      ## Upload signed APK to internal Google Play
-      - name: Upload signed APK to Google Play
-        uses: r0adkll/upload-google-play@v2
-        if: ${{!endsWith(github.ref, '-0') }}
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT }}
-          packageName: ${{ secrets.GOOGLE_PLAY_PACKAGE_NAME }}
-          releaseFiles: ${{steps.sign_app.outputs.signedReleaseFile}}
-          track: internal
-          userFraction: 1.0 # 10% of users will get the update
 
       ## Upload signed APK to Google Play
       - name: Upload signed APK to Google Play
         uses: r0adkll/upload-google-play@v2
-        if: ${{!endsWith(github.ref, '-0') }}
         with:
           serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT }}
           packageName: ${{ secrets.GOOGLE_PLAY_PACKAGE_NAME }}
