--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -74,12 +74,12 @@ jobs:
         with:
             files: ${{steps.sign_app.outputs.signedReleaseFile}}
 
-      ## Upload signed APK to Google Play
-      - name: Upload signed APK to Google Play
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT }}
-          packageName: ${{ secrets.GOOGLE_PLAY_PACKAGE_NAME }}
-          releaseFiles: ${{steps.sign_app.outputs.signedReleaseFile}}
-          track: production
-          userFraction: 0.1 # 10% of users will get the update
+      # ## Upload signed APK to Google Play
+      # - name: Upload signed APK to Google Play
+      #   uses: r0adkll/upload-google-play@v1
+      #   with:
+      #     serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT }}
+      #     packageName: ${{ secrets.GOOGLE_PLAY_PACKAGE_NAME }}
+      #     releaseFiles: ${{steps.sign_app.outputs.signedReleaseFile}}
+      #     track: production
+      #     userFraction: 0.1 # 10% of users will get the update
