--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teatime",
-  "version": "1.2.2",
+  "version": "2.0.0-0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kauefontes/teatime.git"
